Fixed problem with display on firefox
Former-commit-id: e8e186cf0fac8fe148c4c91e4b32d8ad7160b178
Former-commit-id: 07b70cec862a4431054f089eeffabc894b13f6b9

--- a/OEBPS/readk.it/sass/styles.scss
+++ b/OEBPS/readk.it/sass/styles.scss
@@ -83,8 +83,8 @@ $slider-width: 30px;
 }
 
 .#{$namespace}-wrapper {
-    /* Firefox *almost* works if we comment out the next line  and use height: 100%; instead */
-    position: absolute;
+    position: relative;
+    height: 100%;
     /* The next two lines allow for an "overlap" when scrolling a page vertically */
     top: 20px;
     overflow: visible !important;
@@ -106,7 +106,6 @@ $slider-width: 30px;
 }
 
 .#{$namespace}-scroller {
-    /* Firefox *almost* works if we comment out the next line */
     position: absolute;
     -webkit-tap-highlight-color: rgba(0,0,0,0);
     width: 100%;
